--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,74 @@
 version: 2
+registries:
+  modb-anidb:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-anidb
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
+  modb-anilist:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-anilist
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
+  modb-anime-planet:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-anime-planet
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
+  modb-anisearch:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-anisearch
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
+  modb-core:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-core
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
+  modb-db-parser:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-db-parser
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
+  modb-kitsu:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-kitsu
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
+  modb-livechart:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-livechart
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
+  modb-mal:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-mal
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
+  modb-notify:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-notify
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
+  modb-test:
+    type: maven-repository
+    url: https://maven.pkg.github.com/manami-project/modb-test
+    username: manami-project
+    password: ${{secrets.PACKAGES_READ_TOKEN}}
 updates:
   - package-ecosystem: "gradle"
     directory: "/"
+    registries:
+      - modb-anidb
+      - modb-anilist
+      - modb-anime-planet
+      - modb-anisearch
+      - modb-core
+      - modb-db-parser
+      - modb-kitsu
+      - modb-livechart
+      - modb-mal
+      - modb-notify
+      - modb-test
     schedule:
       interval: "daily"
