--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,4 +53,4 @@ jobs:
         if: ${{ matrix.java == 21 }}
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: manami-app/build/reports/kover/reportJvm.xml
+          files: manami-app/build/reports/kover/reportJvm.xml
